--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,6 @@
 [build]
-  functions = "functions"
   publish = "."
-
-[[redirects]]
-  from = "/api/*"
-  to = "/.netlify/functions/:splat"
-  status = 200
+  command = ""
 
 [[redirects]]
   from = "/*"
