--- a/netlify.toml
+++ b/netlify.toml
@@ -6,6 +6,7 @@
   from = "/*"
   to = "/index.html"
   status = 200
+  force = true
 
-[functions]
-  directory = "functions"
+[build.environment]
+  NODE_VERSION = "18"
