--- a/package.json
+++ b/package.json
@@ -2,16 +2,11 @@
   "name": "portfolio-website",
   "version": "1.0.0",
   "description": "Modern portfolio website with admin panel",
-  "main": "server.js",
+  "main": "index.html",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "serve ."
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.22"
+    "serve": "^14.2.1"
   }
 }
